--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: cleaning_my_home
-description: "Game Cleaning My House."
+description: "Help our little hero Crabs in Cleaning His Home!"
 publish_to: 'none'
 version: 0.1.0
 
